14112
The following code fails to compile with the CPS plugin.

{code}
import scala.continuations.ControlContext._

object Test {
  def suspended[A](x: A): A @suspendable = x
  def test[A](x: A): A @suspendable = suspended(x) match { case x => x }
}
{code}

{code}
test/files/pos/rich9.scala:5: error: cps code not allowed here / class scala.tools.nsc.ast.Trees$$Bind / (x @ _)
  def test[A](x: A): A @suspendable = suspended(x) match { case x => x }
                                                                ^
one error found
{code}

I think it should be able to be translated.
